--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Uniswap Interface</title>
-    <meta name="description" content="Swap or provide liquidity on the Uniswap Protocol" />
+    <title>OpenCode Swap</title>
+    <meta name="description" content="Swap or provide liquidity" />
 
     <!--
       %PUBLIC_URL% will be replaced with the URL of the `public` folder during build.
